# kemory-community

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MAINTAINER_TODO.md  NOTICE  PROJECT_PLAN.md  README.md  SECURITY.md  __init__.py  __main__.py  alembic.ini  auth.py  config.py  docker-compose.community.yml  docker-entrypoint.sh  index.html  main.py  mcp_bridge.py  nginx.conf  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  postinstall.js  pyproject.toml  releases.py  tailwind.config.ts  telemetry.py  tsconfig.tsbuildinfo  vite.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  codeql.yml  community-config.yml  dco.yml  release.yml  stale.yml  sync-from-main.yml
adapters/blob_store/: base.py  local_fs_backend.py  minio_backend.py
adapters/identity_provider/: __init__.py  keycloak_idp.py
adapters/telemetry/: __init__.py  base.py  posthog_backend.py
adapters/vector_store/: base.py  factory.py  pgvector_backend.py  weaviate_backend.py
agent_skill/: skill.py
api/: __init__.py
api/routes/: __init__.py  agents.py  ai_chats.py  artifacts.py  audit.py  consolidation.py  enrichment.py  extension_keys.py  graph.py  health.py  me.py  memories.py  pair.py  permissions.py  security.py  teams.py  waitlist.py
backend/: main.py
backend/adapters/blob_store/: __init__.py  minio_backend.py
backend/adapters/telemetry/: noop.py  (+1 more)
backend/config/: __init__.py  settings.py
backend/core/: __init__.py  active_org.py  auth.py  body_size_limit.py  database.py  dependencies.py  keycloak_admin.py  metrics.py  query_safety.py  tenancy.py  tenant_rate_limit.py  types.py
backend/mcp/: __init__.py  server.py
backend/models/: agent.py  consent.py  memory.py  namespace_policy.py  session_summary.py
backend/services/: __init__.py  agent_service.py  ai_chat_service.py  artifact_service.py  artifact_storage.py  auth_service.py  brief_service.py  cognition_bridge.py  compression_pipeline.py  consolidation_service.py  cross_agent_context.py  enrichment_service.py  extension_key_service.py  memory_service.py  namespace_resolver.py  pair_service.py  provenance_service.py  security_service.py  team_resolver.py  user_context_service.py
backend/workers/: __init__.py  consolidation_loop.py
compression/: aaak.py  cognition_round_trip.py
config/: __init__.py  factory.py  gen_env.py  settings.py
contrib/core_ai_backend/: adapter.py
core/: active_org.py  auth.py  body_size_limit.py  database.py  dependencies.py  keycloak_admin.py  keycloak_validator.py  query_safety.py  rate_limit.py  redis.py  tenancy.py  tenant_rate_limit.py  types.py
dashboard/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
dashboard/src/: App.tsx  index.css
docs/: CNAME  PORT_REGISTRY.md  _config.yml  index.md  privacy.md  setup.md
embeddings/: encoder.py
integrations/: __init__.py
kemory/agent_skill/: __init__.py
kemory/compression/: __init__.py  cache.py  concept.py  grouping.py  llm_client.py
kemory/consolidation/: worker.py
kemory/context/: __init__.py  vault_context.py
kemory/embeddings/: __init__.py  encoder.py
kemory/observer/: __init__.py  extractor.py
kemory/reflector/: __init__.py
kemory/search/: __init__.py  aggregator.py  chain_of_note.py  ranking.py  reranker.py  temporal.py
kemory/skills/: skill_store.py
kemory/storage/: base.py  platform.py
kemory/utils/: __init__.py
kemory_cli/: __init__.py  _envs_internal.py  auth.py  releases.py
mcp/: server.py  tools.py
mcp/tools/: __init__.py  _base.py  consolidation.py  memory.py  meta.py  namespaces.py  skills.py
migrations/: __init__.py  env.py
migrations/versions/: 001_add_waitlist_tables.py  002_mv2_unified_memory_schema.py  005_s9n3073_hybrid_vector_search.py  006_add_api_key_prefix.py  009_multi_tenant_org_id.py  010_org_id_not_null.py  012_kemory_session_summary.py  013_multi_tenant_org_id.py
models/: __init__.py  agent.py  ai_chat.py  audit.py  consent.py  episode.py  memory.py  memory_event.py  memory_vector.py  namespace_policy.py  permission.py  session_summary.py  team.py  waitlist.py
prompts/: README.md  chatgpt.md  claude-code.md  claude-desktop.md  cline.md  cursor.md  generic-mcp-agent.md  kemory-brief.md  no-mcp-rest-only.md  windsurf.md
reflector/: agent.py
scripts/: qa_full_test.py  test-cli.js  test_community_config.sh  verify-package.js
search/: hybrid.py
service/: memory_service.py
services/: agent_service.py  ai_chat_service.py  artifact_service.py  artifact_storage.py  audit_service.py  auth_service.py  brief_service.py  chat_classifier.py  cognition_bridge.py  compression_pipeline.py  consolidation_service.py  email_service.py  enrichment_service.py  extension_key_service.py  gatekeeper_service.py  mcp_setup_service.py  memory_service.py  namespace_matcher.py  namespace_resolver.py  org_role_resolver.py  provenance_service.py  security_service.py  team_resolver.py  waitlist_service.py
src/: App.tsx  index.css  main.tsx
src/api/: agents.ts  artifacts.ts  audit.ts  chatMappings.ts  chats.ts  client.ts  health.ts  memories.ts  types.ts  waitlist.ts
src/context/: AuthContext.tsx
src/hooks/: useAgents.ts  useAudit.ts  useChats.ts  useMemories.ts  useWaitlist.ts
src/lib/: connectorDefaults.ts  keycloak.ts  memoryHealth.ts  utils.ts
src/pages/: DashboardOverview.tsx  LoginPage.tsx  UnauthorizedPage.tsx
storage/: local.py  platform.py
templates/email/: referral_notification.html  welcome.html
tests/e2e/: 00-smoke.spec.ts  01-navigation.spec.ts  02-dashboard.spec.ts  05-audit.spec.ts  06-permissions-memories.spec.ts  07-analytics-security-waitlist.spec.ts  08-api-contracts.spec.ts  fixtures.ts  heading_check.spec.ts  health_debug.spec.ts  screenshot_all.spec.ts  signin_check.spec.ts
tests/unit/: utils.test.ts
utils/: text.py
workers/: consolidation_loop.py
(+136 files in other folders)
