[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kemory-community"
version = "0.1.0"
description = "Community edition persistent memory layer for AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "SeKondBrain Engineering", email = "engineering@sekondbrain.ai" }
]
keywords = ["memory", "ai", "agents", "knowledge-graph", "episodic-memory"]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
# P2 #15: pyproject is now the single source of truth for deps. The
# Dockerfile installs `pip install -e .[backend,platform]` instead of
# `pip install -r requirements.txt` (deleted). Two extras cover the
# main deployment shapes; ``local`` adds SQLite for laptop dev.
local = [
    "aiosqlite>=0.19",
    "sqlite-vec>=0.1.0",
]
# In-process embedding model (bge-small-en-v1.5 via FastEmbed/ONNX). Used by
# community Docker so the stack has no external embedding service dependency.
local-embeddings = [
    "fastembed>=0.7.0",
]
platform = [
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",   # alembic + sync DB drivers
    "alembic>=1.13.1",
    "pgvector>=0.3.6",
    "psycopg[binary]>=3.2.0",
    "redis[hiredis]>=5.0.1",
]
backend = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.1",
    "sqlalchemy>=2.0",
    # python-jose is retained for the internal HS256 agent-JWT codec
    # (auth_service.create/decode_access_token). Hosted bearer verification
    # is intentionally absent from the community build.
    "python-jose[cryptography]>=3.3.0",
    # P4 #24: bcrypt direct (no passlib). passlib pulls stdlib `crypt`
    # which is removed in Python 3.13. We only ever used the bcrypt
    # scheme, so call bcrypt directly.
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "orjson>=3.9.15",
    "python-dotenv>=1.0.1",
    # WS-8: Prometheus /metrics endpoint (per-org HTTP observability).
    "prometheus-client>=0.20.0",
    # Email (templates + SMTP). Disabled by default but always in deps so
    # enabling EMAIL_ENABLED=true doesn't ImportError at runtime.
    "aiosmtplib>=3.0.1",
    "jinja2>=3.1.3",
    # NOTE: the in-process embedding model lives in the `local-embeddings`
    # extra so non-community builds can still offload embeddings to a service.
    # Bounded TTL cache for team_resolver L1 (in-process). 5-second TTL
    # absorbs request bursts; Redis is the L2 with the canonical 60-second
    # TTL. See backend/services/team_resolver.py.
    "cachetools>=5.3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "testcontainers>=3.7.1",
    "factory-boy>=3.3.0",
    "faker>=23.2.1",
    "hatchling",
]
# WS-10 — kemory CLI for humans. Installed as `pip install kemory[cli]`,
# exposed as the `kemory` console script. Keeps all heavy backend deps
# out of the CLI install footprint (httpx + click are enough).
cli = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
]

[project.scripts]
kemory = "kemory_cli.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# P2 #11: coverage gate now covers BOTH the library and the backend HTTP
# layer. The previous --cov-fail-under=100 only measured kemory/
# (the library), giving a misleading "100% covered" signal while the
# bigger backend/ surface (the bulk of the request path) was untracked.
#
# Starting threshold is 15 — the actual measured coverage when this
# landed, taken honestly rather than aspirationally. Ratchet plan:
#
#   sprint    target  rationale
#   1         15      this commit; honest baseline
#   2         25      fill gaps in services/ exposed by the new measure
#   3         40      add API-route happy-path tests
#   4         55      cover core/ (auth, tenancy, rate limit, body limit)
#   ongoing   65+     keep climbing as bug-driven tests accumulate
#
# Update both this number and CONTRIBUTING.md when you bump it.
addopts = "--cov=kemory --cov=backend --cov-report=term-missing --cov-fail-under=15"

[tool.coverage.run]
source = ["kemory", "backend"]
omit = ["tests/*", "backend/migrations/*", "backend/config/gen_env.py"]

[tool.hatch.build.targets.wheel]
packages = ["kemory", "kemory_cli"]

# Sdist scope. Hatchling honours .gitignore by default, but local virtualenvs
# named .venv311/, .venv-foo/, etc. are *untracked* (not ignored unless they
# match a pattern), and once leaked into the sdist they break extraction
# under Python 3.12's tar `data` filter (absolute symlinks). The explicit
# exclude below makes the wheel build reproducible regardless of which dev
# venvs happen to live in the working tree.
[tool.hatch.build.targets.sdist]
include = [
  "kemory",
  "kemory_cli",
  "backend",
  "scripts",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]
exclude = [
  ".venv*",
  "**/__pycache__",
  "**/*.pyc",
  "qa_output",
  "local_deploy",
  "dist",
  "build",
  "*.bak",
]


# ─── Ruff (P2 #14) ─────────────────────────────────────────────────────────
# One config for both the linter and the formatter. Pragmatic rule set —
# we are NOT chasing every E501, W503, etc. The rules below are the ones
# that catch real bugs (unused imports, mutable default args, bare except).
# Style/format is delegated to `ruff format` (Black-compatible).

[tool.ruff]
line-length = 110            # generous; fits most function signatures
target-version = "py311"
extend-exclude = [
  "tests/_legacy_stubs",     # to be triaged in P2 #12
  "qa_output",
  "benchmarks",              # mostly removed but keep guard for stragglers
  "backend/migrations/versions",  # alembic-generated; keep verbatim
]

[tool.ruff.lint]
# Selected rules. Add to this list deliberately, document why.
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes — unused imports, undefined names
  "I",    # isort — import ordering
  "B",    # flake8-bugbear — likely bugs (mutable default args, broad except)
  "UP",   # pyupgrade — keeps with P2 #13
  "W",    # pycodestyle warnings
  "C4",   # flake8-comprehensions — simpler list/dict/set comprehensions
  "SIM",  # flake8-simplify — readability suggestions
  "ASYNC",# flake8-async — common asyncio mistakes
]
ignore = [
  "E501",  # line too long — formatter handles it; manual edge cases tolerated
  "E731",  # lambda assignments are fine where used
  "B008",  # FastAPI dependencies use Depends() in defaults (false positive)
  "SIM108",# ternary suggestions hurt readability when the branches are long

  # ── Tracked debt — TODO: fix in a dedicated cleanup PR ──
  # These rules trigger ~120 times across pre-existing modules. Each is a
  # real code-hygiene improvement but none is critical for correctness.
  # Cleaning them all requires per-callsite judgement and would hide other
  # diffs in the cleanup commit. They stay ignored at the gate level until
  # a focused PR addresses them. Tracked in the codebase-review epic as a
  # follow-up item.
  "B904",   # raise-without-from-inside-except — explicit exception chaining
  "B017",   # assert-raises-exception — too-broad pytest.raises (test only)
  "F841",   # unused local variable — usually a leftover from a refactor
  "E711",   # == None comparisons — should be `is None`
  "E712",   # == True/False — should be `is True/False`
  "SIM105", # try/except/pass → contextlib.suppress
  "SIM117", # nested with-statements → single line
  "SIM103", # needless bool wrapping
  "SIM110", # any()/all() instead of for+return-True
  "SIM222", # `expr or True` → `True`
  "C408",   # unnecessary list()/dict()/tuple() calls
  "B007",   # unused loop control variable — name with `_` instead
  "UP042",  # str enum migration to StrEnum (3.11+) — breaking change
  "UP038",  # isinstance(x, (A, B)) → isinstance(x, A | B) — runtime perf cost
  "E402",   # module-level import not at top — sometimes intentional
  "ASYNC221", "ASYNC230",  # async-aware lint, false-positive heavy
  # ASYNC240 has been renamed in newer ruff; we ignore it via the SIM
  # category override below if it surfaces.
  "F821",   # undefined name — only in test fixtures with deferred imports
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "B011",     # asserts in tests are intentional
  "ASYNC230", # async open() patterns in test fixtures
]
"backend/migrations/env.py" = ["E402"]

[tool.ruff.format]
# Black-compatible defaults. Single setting that diverges: skip-magic-trailing-comma=false
# preserves intentional trailing commas in long signatures.


# ─── mypy (P2 #14, advisory) ───────────────────────────────────────────────
# Permissive starting config. Strictness ratchets module-by-module via the
# [[tool.mypy.overrides]] mechanism — we add a strict override for any module
# that's been cleaned up. Today: only kemory.utils.text (~10 LOC).

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
follow_imports = "silent"
exclude = [
  "tests/_legacy_stubs/",
  "backend/migrations/versions/",
  "qa_output/",
]

[[tool.mypy.overrides]]
module = "kemory.utils.text"
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true
